--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         }
     },
     "require": {
-        "codeception/codeception": "^2.1"
+        "codeception/codeception": "^2.1",
+        "phpunit/phpunit": "^5.3"
     }
 }
