class Select method add

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload" : {
         "psr-4" : {
-            "app\\" : "app/"
+            "app\\"  : "app/",
+            "unit\\" : "phpunit_test/"
         }
     },
     "require": {
