--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     },
     "require": {
-        "phpunit/phpunit": "^5.3"
+        "phpunit/phpunit": "^5.3",
+        "phpunit/dbunit": "^2.0"
     }
 }
